[gd_scene load_steps=3 format=3 uid="uid://dv076jyfsos7u"]

[ext_resource type="Script" path="res://Meteor/Meteor.gd" id="1_150pj"]
[ext_resource type="Texture2D" uid="uid://dtodqfch3lsux" path="res://Textures/meteorBig.png" id="1_bjlny"]

[node name="Meteor" type="Area2D" groups=["damageable"]]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_150pj")
minSpeed = 65.0
maxSpeed = 90.0
minRotationRate = 40.0
maxRotationRate = 80.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bjlny")
region_rect = Rect2(100, 111, 0, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(3, -4)
polygon = PackedVector2Array(-32, 2, -43, -23, -24, -39, 5, -43, 20, -34, 39, 10, 24, 36, -10, 51, -31, 46, -46, 28)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(7.2, 5.75)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
